# code-challenges

1-word-count/: CHANGELOG.md  README.md  word-count.cabal
1-word-count/app/: Main.hs
10-unique/: CHANGELOG.md  LICENSE  README.md  uniq-like.cabal
10-unique/src/: Main.hs
10-unique/tests/: UnitTests.hs
2-json-parser/: CHANGELOG.md  LICENSE  README.md  json-parser.cabal
2-json-parser/app/: Main.hs
2-json-parser/src/: Main.hs  Parser.hs  Tokenizer.hs
2-json-parser/tests/: UnitTests.hs
word-count/: README.md  pom.xml
word-count-2/: LICENSE  word-count.cabal
word-count-2/app/: Main.hs
word-count/src/main/java/ru/izebit/: ApplicationLauncher.java
