cabal-version:      3.4
name:               json-parser
version:            0.1.0.0
synopsis:           coding challenges #2
-- description:
homepage:           https://izebit.ru
license:            BSD-3-Clause
license-file:       LICENSE
author:             Artem Konovalov
maintainer:         izebit@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable json-parser
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.0.0
    hs-source-dirs:   app
    default-language: GHC2021
