cabal-version:      3.4
name:               json-parser
version:            0.1.0.0
synopsis:           coding challenges #2
-- description:
homepage:           https://izebit.ru
license:            BSD-3-Clause
license-file:       LICENSE
author:             Artem Konovalov
maintainer:         izebit@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:
-- README.md

common warnings
    ghc-options: -Wall

executable json-parser
    import:           warnings
    main-is:          Parser.hs
    other-modules:
        Tokenizer
    -- other-extensions:
    build-depends:    
        base ^>=4.19.0.0,
        regex-tdfa ^>= 1.3.2,
        directory ^>= 1.3.8.1,
        raw-strings-qq ^>= 1.1
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options: -Wall -main-is Parser

test-suite unit-test
    type:           exitcode-stdio-1.0
    hs-source-dirs: 
        tests,
        src
    other-modules:
        Tokenizer,
        Parser
    main-is: UnitTests.hs
    ghc-options: -Wall -main-is Tests
    build-depends:
        base ^>=4.19.0.0,
        HUnit ^>=1.6, 
        regex-tdfa ^>= 1.3.2,
        directory ^>= 1.3.8.1,
        raw-strings-qq ^>= 1.1,
        tasty,
        tasty-hunit
    default-language: GHC2021