cabal-version:      3.4
name:               word-count
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://izebit.ru
license:            MIT
license-file:       LICENSE
author:             Artem Konovalov
maintainer:         izebit@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable word-count
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.19.0.0,
        text ^>=2.1,
        bytestring ^>=0.12.0.2,
        containers ^>=0.6.8

    hs-source-dirs:   app
    default-language: Haskell2010
